[gd_scene load_steps=6 format=3 uid="uid://062iuucw1pym"]

[ext_resource type="Script" path="res://Player.gd" id="1_mkqqa"]
[ext_resource type="Script" path="res://LicensePopup.gd" id="2_0bfsf"]
[ext_resource type="Theme" uid="uid://mgwaiplxoewy" path="res://LicenseText.tres" id="3_3wiku"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_17xum"]
size = Vector2(64, 64)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rbeu4"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0

[node name="World" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Player" type="CharacterBody2D" parent="."]
script = ExtResource("1_mkqqa")

[node name="Polygon2D" type="Polygon2D" parent="Player"]
color = Color(0.247059, 0.372549, 0.988235, 1)
polygon = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_17xum")

[node name="Level" type="RigidBody2D" parent="."]
freeze = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level"]
polygon = PackedVector2Array(-384, -512, -384, 192, 384, 192, 384, -512, 768, -512, 768, 512, -768, 512, -768, -512)

[node name="Polygon2D" type="Polygon2D" parent="Level"]
color = Color(0.811765, 0.321569, 0.211765, 1)
polygon = PackedVector2Array(-384, -512, -384, 192, 384, 192, 384, -512, 768, -512, 768, 512, -768, 512, -768, -512)

[node name="LicensePopup" type="Popup" parent="."]
title = "Licenses"
initial_position = 2
size = Vector2i(512, 512)
borderless = false
script = ExtResource("2_0bfsf")

[node name="Camera2D" type="Camera2D" parent="LicensePopup"]
anchor_mode = 0

[node name="ScrollContainer" type="ScrollContainer" parent="LicensePopup/Camera2D"]
clip_contents = false
offset_right = 512.0
offset_bottom = 512.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_rbeu4")
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="LicensePopup/Camera2D/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="GameLicenseContainer" type="PanelContainer" parent="LicensePopup/Camera2D/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_3wiku")

[node name="GameLicense" type="RichTextLabel" parent="LicensePopup/Camera2D/ScrollContainer/VBoxContainer/GameLicenseContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Hello, World!"
fit_content = true

[node name="GodotLicenseContainer" type="PanelContainer" parent="LicensePopup/Camera2D/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_3wiku")

[node name="GodotLicense" type="RichTextLabel" parent="LicensePopup/Camera2D/ScrollContainer/VBoxContainer/GodotLicenseContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Hello, World!"
fit_content = true

[node name="FreeTypeCopyrightContainer" type="PanelContainer" parent="LicensePopup/Camera2D/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_3wiku")

[node name="FreeTypeCopyright" type="RichTextLabel" parent="LicensePopup/Camera2D/ScrollContainer/VBoxContainer/FreeTypeCopyrightContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Hello, World!"
fit_content = true

[node name="ENetLicenseContainer" type="PanelContainer" parent="LicensePopup/Camera2D/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_3wiku")

[node name="ENetLicense" type="RichTextLabel" parent="LicensePopup/Camera2D/ScrollContainer/VBoxContainer/ENetLicenseContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Hello, World!"
fit_content = true

[node name="MbedLicenseContainer" type="PanelContainer" parent="LicensePopup/Camera2D/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_3wiku")

[node name="MbedLicense" type="RichTextLabel" parent="LicensePopup/Camera2D/ScrollContainer/VBoxContainer/MbedLicenseContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Hello, World!"
fit_content = true

[connection signal="close_requested" from="LicensePopup" to="LicensePopup" method="_on_close_requested"]
